--- a/kb.css
+++ b/kb.css
@@ -129,8 +129,8 @@ for i in (1..9) {
 .DSA.HOMING .keylabels, .SA.HOMING .keylabels { background-image: none; }
 
 /* color swatches */
-#swatches { list-style-type: none; margin: 0px; padding: 0px; }
-.swatch {
+#swatches, #glyphs { list-style-type: none; margin: 0px; padding: 0px; }
+.swatch, .glyph {
   display: inline-block;
   position: relative;
   width: 16px;
@@ -140,8 +140,17 @@ for i in (1..9) {
   margin-bottom: -6px;
   padding: 0px;
 }
+.glyph { 
+  width: 20px; 
+  text-align: center;
+  padding-top: 8px;
+  font-size: 16px;
+}
+.glyph:hover { background-color: #eee; }
+.glyph.selected { background-color: #eef !important; }
+
 #swatches.disabled .swatch { background-color: rgb(235,235,228) !important; }
-#swatches [data-hint]:after { white-space: nowrap; }
+#swatches [data-hint]:after, #glyphs [data-hint]:after { white-space: nowrap; }
 
 .swatch .highlight { display: none; }
 .swatch.selected-bg .highlight.bg { display: block; z-index: 100; width: 6px; height: 6px; border: solid 1px black; background: white; opacity: 0.75; position: absolute; left: 7px; top: 23px; }
@@ -164,7 +173,7 @@ for i in (1..9) {
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
-#rawdata, #rawdata-error, #customstyles, #customstyles-error, #noteseditor { font-family: "Consolas", "Courier New", "Courier", monospace; }
+#rawdata, #rawdata-error, #customstyles, #customstyles-error, #noteseditor, #picker-html { font-family: "Consolas", "Courier New", "Courier", monospace; }
 #rawdata, #customstyles { width: 100%; }
 #rawdata-error, #customstyles-error { white-space: pre; }
 
