--- a/kb.css
+++ b/kb.css
@@ -263,3 +263,9 @@ for i in (1..9) {
   font-style: normal; 
   margin: 0 -0.66em 0 -0.33em;
 }
+
+.avatar {
+  max-width: 1.25em;
+  max-height: 1.25em;
+}
+
