--- a/kb.css
+++ b/kb.css
@@ -250,44 +250,38 @@ span.PETSCII {
 }
 
 /* make the background dropdown list headers stand out a bit */
-.bg-dropdown-header-wood {
+.bg-dropdown-header {
   background-color: #ccc;
-  background: url('../bg/wood/wood-slice.jpg');
-  color: #000; font-size: 1.618em;
+  font-size: 1.618em;
   text-align:  center;
+}
+
+.bg-dropdown-header-wood {
+  background: url('../bg/wood/wood-slice.jpg');
+  color: #000;
 }
 
 .bg-dropdown-header-metal {
-  background-color: #ccc;
   background: url('../bg/metal/metal-slice.jpg');
-  color: #fff; font-size: 1.618em;
-  text-align:  center;
+  color: #fff;
 }
 
 .bg-dropdown-header-marble {
-  background-color: #ccc;
   background: url('../bg/marble/marble-slice.jpg');
-  color: #fff; font-size: 1.618em;
-  text-align:  center;
+  color: #fff;
 }
 
 .bg-dropdown-header-plastic {
-  background-color: #ccc;
   background: url('../bg/plastic/plastic-slice.jpg');
-  color: #000; font-size: 1.618em;
-  text-align:  center;
+  color: #000;
 }
 
 .bg-dropdown-header-leather {
-  background-color: #ccc;
   background: url('../bg/leather/leather-slice.jpg');
-  color: #fff; font-size: 1.618em;
-  text-align:  center;
+  color: #fff; 
 }
 
 .bg-dropdown-header-carbon {
-  background-color: #ccc;
   background: url('../bg/carbonfibre/carbon-slice.jpg');
-  color: #fff; font-size: 1.618em;
-  text-align:  center;
+  color: #fff; 
 }
