Implemented keyboard 'decals'
-- Intended to put decorative labels (logos, etc.) on keyboard layouts.
-- They're basically just invisible keycaps; this works pretty well,
since there are already so many formatting options for text on keycaps,
and it saves us from having to manage a completely separate type of
thing.
-- Props to iandoug for the idea!

Also:
-- Disable x2,y2,width2,height2 on decals
-- Increase max keycap size to 18x18 (allows for really large decals)

--- a/kb.css
+++ b/kb.css
@@ -67,9 +67,12 @@ html, body {
   box-sizing: border-box;
   background-clip: padding-box;
 }
-#keyboard .hover .keyborder { border-color: green !important; border-style: solid; }
-#keyboard .selected .keyborder { border-color: red !important; border-style: solid; }
+#keyboard .hover .keyborder, #keyboard .hover .decal .keyborder { border-color: green !important; border-style: solid; }
+#keyboard .selected .keyborder, #keyboard .selected .decal .keyborder { border-color: red !important; border-style: solid; }
 #keyboard .ghosted { opacity: 0.5; }
+#keyboard .decal .keyborder { border-style: none !important; background: transparent !important; }
+#keyboard .hover .decal .keyborder, 
+#keyboard .selected .decal .keyborder { border-style: dashed !important; border-width: 1px; }
 
 /* Key labels */
 .keylabel>div { display: table-cell; position: static !important; }
