--- a/kb.css
+++ b/kb.css
@@ -176,7 +176,7 @@ for i in (1..9) {
 
 /* general styles */
 .hidden { display: none; }
-.error { border: solid 2px rgb(217,83,79); }
+.error { border: solid 2px rgb(217,83,79) !important; }
 #selectionRectangle { position: absolute; border: dashed 2px red; }
 #rotationCrosshairs {
   display: none;
@@ -191,8 +191,9 @@ for i in (1..9) {
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
-#rawdata, #rawdata-error, #customstyles, #customstyles-error, #noteseditor, #picker-html { font-family: "Consolas", "Courier New", "Courier", monospace; }
-#rawdata, #customstyles { width: 100%; }
+#rawdata, #rawdata-error, #customstyles, #customstyles-error, #noteseditor, #picker-html { font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace; line-height: 1.42857143 !important; border: solid 1px #ccc; }
+#rawdata, #customstyles { width: 100%; height: 400px; }
+#noteseditor { height: 275px; }
 #rawdata-error, #customstyles-error { white-space: pre; }
 
 #tab-content {
