Misc changes, mostly for per-key switch type
-- Switches.json -> now using hash for "switches" for easy lookup
-- Serialization changed so that we use "" for default switch types, and
this round-trips properly.
-- Had to switch from <select> to bootstrap-style dropdowns; when I
started trying to handle the 'default' settings better (i.e., when the
per-key setting was blank), Angular was throwing errors using the
<select> element.
-- Changing switch mount blanks out brand/type, etc.
-- Now disabling switch mount/brand/type controls when appropriate
-- PNG rendering now only doing #keyboard-bg, which allows me to make
#keyboard full-width again.

--- a/kb.css
+++ b/kb.css
@@ -308,3 +308,32 @@ for i in (1..9) {
   line-height: 1.5;
   border-radius: 3px;
 }
+
+
+.dropdown-fixedwidth {
+  width:110px;
+  max-width:110px;
+  height: 26px;
+}
+.dropdown-fixedwidth>:first-child {
+  display: block;
+  left: 5px;
+  width: calc(100% - 12px);
+  text-align: left;
+  overflow: hidden;
+}
+.dropdown-fixedwidth .caret {
+  display: block;
+  position: absolute;
+  right: 5px;
+  top: 11px;
+}
+
+.dropdown-select {
+  max-height: 40vh;
+  overflow-y: auto;
+}
+
+.dropdown-fixedwidth:disabled {
+  background-color: #eee !important;
+}
