--- a/kb.css
+++ b/kb.css
@@ -195,7 +195,7 @@ for i in (1..9) {
 #rawdata, #customstyles { width: 100%; height: 400px; }
 #noteseditor { height: 275px; }
 #rawdata-error, #customstyles-error { white-space: pre; }
-#summary { width: 100%; height: 400px; padding-left: 20px;}
+#summary { margin-left: 20px; padding-left: 20px; }
 
 #tab-content {
     border-left: 1px solid #ddd;
