Made the keycap and switch summary tables a little more presentable

--- a/kb.css
+++ b/kb.css
@@ -338,3 +338,18 @@ for i in (1..9) {
 .dropdown-fixedwidth:disabled {
   background-color: #eee !important;
 }
+
+table.summary {
+    padding: 5px;
+    border: 1px black;
+  
+}
+
+table.summarytable {
+  border-collapse: collapse;
+}
+
+.summarytable table, th, td {
+  border: 1px solid black;
+  padding: 2px 5px;
+}
