A few tweaks to the switch summary display
-- Reverted to using lowercase "IDs" in switches.json (no need to
change, and would break existing files))
-- Now showing the "display name" of the switches in the summary
display.

--- a/kb.css
+++ b/kb.css
@@ -343,9 +343,11 @@ for i in (1..9) {
 
 table.summarytable {
   border-collapse: collapse;
+  margin-top: 1em;
 }
 
-.summarytable table, th, td {
+table.summarytable th, table.summarytable td {
   border: 1px solid black;
   padding: 2px 5px;
 }
+
