Added rendering support for a 'CHICKLET' profile. -- Updated the tooltip for the profile fields to list supported profiles. -- Fixed a rendering issue that prevented 'keySpacing' from being utilized (it wasn't used for the existing profiles).

--- a/kb.css
+++ b/kb.css
@@ -13,6 +13,7 @@ webfont(family, file, weight=normal, style=normal) {
 }
 /* Set up all the web-fonts we host */
 webfont('engravers_gothic_fsregular', 'EngraversGothic-Regular-webfont');
+webfont('volkswagen_serialregular', 'Volkswagen_Serial-Regular-webfont');
 
 /* font and css for combining-diacritical things */
 @font-face {
